WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88511
[GTK] deviceScaleFactor setting is not honored
https://bugs.webkit.org/show_bug.cgi?id=88511
Summary
[GTK] deviceScaleFactor setting is not honored
Simon Pena
Reported
2012-06-07 01:18:19 PDT
There's currently no way to update the deviceScaleFactor using the internal settings in the GTK port.
Attachments
Patch
(1.59 KB, patch)
2012-06-07 04:07 PDT
,
Simon Pena
no flags
Details
Formatted Diff
Diff
Patch
(1.51 KB, patch)
2012-06-07 07:43 PDT
,
Simon Pena
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Pena
Comment 1
2012-06-07 02:31:48 PDT
Besides the WebKitWebSettings not being connected, the GraphicsContext is currently ignoring the deviceScaleFactor setting. This was fixed in Chromium in
bug #88136
. The test LayoutTests/fast/hidpi/device-scale-factor-paint.html was added there, and is currently failing in the GTK port.
Simon Pena
Comment 2
2012-06-07 03:49:43 PDT
I don't think we need to update the WebKitWebSettings, but simply make the GraphicContext honor the device scale factor property when drawing the WebView, as the Chromium port does in
bug #88136
.
Simon Pena
Comment 3
2012-06-07 04:07:46 PDT
Created
attachment 146250
[details]
Patch
Simon Pena
Comment 4
2012-06-07 04:18:06 PDT
CCing Álex and Martin since they're working around this part
Gustavo Noronha (kov)
Comment 5
2012-06-07 07:30:42 PDT
Comment on
attachment 146250
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=146250&action=review
> Source/WebKit/gtk/ChangeLog:9 > + method of the ChromeClientGTk, since it was previously
The t in Gtk is upper. I'd remove everything after the comma =).
Simon Pena
Comment 6
2012-06-07 07:43:56 PDT
Created
attachment 146289
[details]
Patch
WebKit Review Bot
Comment 7
2012-06-07 08:24:47 PDT
Comment on
attachment 146289
[details]
Patch Clearing flags on attachment: 146289 Committed
r119726
: <
http://trac.webkit.org/changeset/119726
>
WebKit Review Bot
Comment 8
2012-06-07 08:24:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug