[GTK] deviceScaleFactor setting is not honored https://bugs.webkit.org/show_bug.cgi?id=88511

Patch by Simon Pena <spena@igalia.com> on 2012-06-07
Reviewed by Gustavo Noronha Silva.

Honor the deviceScaleFactor property in the paintWebView
method of the ChromeClientGtk.

* WebCoreSupport/ChromeClientGtk.cpp:
(WebKit::paintWebView):

Canonical link: https://commits.webkit.org/106365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119726 268f45cc-cd09-0410-ab3c-d52691b4dbfc